fix: New items are properly highlighted

--- a/layout.html
+++ b/layout.html
@@ -35,10 +35,11 @@
                     rgba(255, 255, 255, 0) 31%,
                     rgba(255, 255, 255, 0) 100%);
         }
-
+        
         .new {
-            border-left: 10px solid red;
-            border-right: 10px solid red;
+            border-left: 10px solid red !important;
+            border-right: 10px solid red !important;
+            margin-bottom: 50px;
         }
 
         .subpar {
